# AERSP-424-HW-1

./: HW 1 Question 1.cpp  HW1_7.cpp  HW1_8_CPP_Version.cpp  HW1_Q_1.cpp  HW1_Q_7_C.cpp  HW1_Q_8_CPP.cpp  README.md  homework1_2.cpp
Final_HW1/: CMakeLists.txt  build.sh
Final_HW1/src/: FlightInfo.cpp  FlightInfo.h  HW1_Q_2-6.cpp  HW1_Q_7_C.cpp  HW1_Q_8_CPP.cpp  Pilot.cpp  Pilot.h  Plane.cpp  Plane.h
HW1_Peters_Cmade/: CMakeLists.txt
HW1_Peters_Cmade/src/: FlightInfo.h  HW1_Q_1.cpp  HW1_Q_7_C.cpp  Plane.h
